# corhyn

./: .gitignore  README.md  install.sh  pyproject.toml
corhyn/: cli.py  pomodoro.py
