[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corhyn"
version = "0.1.0"
description = "A powerful task management and productivity CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Niko Hoffrén", email = "niko.hoffren@gmail.com" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
corhyn = "corhyn.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["corhyn"]
